--- a/Contact-page.html
+++ b/Contact-page.html
@@ -6,19 +6,7 @@
     <title>Contact Us</title>
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            background-color: #f8f9fa;
-        }
-        .navbar {
-            padding: 1rem;
-        }
-        .form-control:focus {
-            border-color:gray;
-            outline: none;
-            box-shadow: none;
-        }
-    </style>
+    <link href="styles.css"rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
@@ -31,7 +19,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href=".html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
