--- a/Product-page.html
+++ b/Product-page.html
@@ -7,30 +7,24 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="cart.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
-    <!-- Responsive Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
-            <!-- Brand Logo -->
             <a class="navbar-brand" href="#">
                 <h2 class="mb-0">Ecommerce</h2>
             </a>
-            <!-- Toggler Button for Mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- Navbar Links and Buttons -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Centered Links -->
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
                 </ul>
-                <!-- Right-aligned Buttons -->
                 <div class="d-flex gap-3">
                     <a href="login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
@@ -45,10 +39,6 @@
             </div>
         </div>
     </nav>
-    <!-- Banner Section -->
-    
-
-    <!-- Latest Products Section -->
     <div class="container text-center my-5">
         <h1>Latest Products</h1>
         <hr>
@@ -61,7 +51,6 @@
         </div>
         <div id="card-items" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4"></div>
     </div>
-    <!-- Footer -->
     <footer class="text-center py-3">
         <p class="mb-0" style="font-size: 1.3em;">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
     </footer>
