--- a/Register.html
+++ b/Register.html
@@ -4,44 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- FontAwesome Icons -->
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
-    <style>
-        .text-aqua{
-            color:aqua;
-        }
-        .form-control:focus {
-            border-color: gray;
-            outline: none;
-            box-shadow: none;
-        }
-    </style>
+    <link href="styles.css"rel="stylesheet">
 </head>
 <body id="body">
-
-    <!-- Header Section -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
-            <!-- Brand Logo -->
             <a class="navbar-brand" href="#">
                 <h2 class="mb-0">Ecommerce</h2>
             </a>
-            <!-- Toggler Button for Mobile -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- Navbar Links and Buttons -->
             <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Centered Links -->
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
                 </ul>
-                <!-- Right-aligned Buttons -->
                 <div class="d-flex gap-3">
                     <a href="login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
@@ -56,8 +38,6 @@
             </div>
         </div>
     </nav>
-
-    <!-- Main Content -->
     <div class="container">
         <h1 class="text-center mb-4">Register</h1>
         <hr>
@@ -86,13 +66,9 @@
             </div>
         </div>
     </div>
-
-    <!-- Footer Section -->
     <footer class="py-4 text-center mt-5">
         <p class="mb-0">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
     </footer>
-
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
