--- a/cart.html
+++ b/cart.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="cart.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
 <div>
@@ -20,9 +20,8 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- Centered Links -->
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
@@ -45,7 +44,7 @@
         <hr class="w-75 mx-auto">
         <div class="d-flex flex-column justify-content-center align-items-center bg-light p-4 rounded shadow" style="height: 350px;">
             <p class="fs-2 mb-4 text-center">Your Cart is Empty</p>
-            <a href="home-page.html" class="text-decoration-none">
+            <a href="index.html" class="text-decoration-none">
                 <button id="cart-continue-btn" class="btn btn-dark px-4 py-2">
                     <i class="fa-solid fa-left-long me-2"></i> Continue Shopping
                 </button>
