--- a/home-page.html
+++ b/home-page.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="cart.js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <!-- Responsive Header -->
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <!-- Centered Links -->
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-dark" href="home-page.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-dark" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Product-page.html">Products</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="About.html">About</a></li>
                     <li class="nav-item"><a class="nav-link text-dark" href="Contact-page.html">Contact</a></li>
