--- a/login.html
+++ b/login.html
@@ -6,16 +6,7 @@
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
-    <style>
-        .text-aqua{
-            color:aqua;
-        }
-        .form-control:focus {
-            border-color: gray;
-            outline: none;
-            box-shadow: none;
-        }
-    </style>
+    <link href="styles.css"rel="stylesheet">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -27,7 +18,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="home-page.html">Home</a>
+                        <a class="nav-link text-dark" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="Product-page.html">Products</a>
