--- a/html/Product-page.html
+++ b/html/Product-page.html
@@ -7,8 +7,8 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-    <link href="styles.css"rel="stylesheet">
+    <script src="../js/script.js"></script>
+    <link href="../css/styles.css"rel="stylesheet">
 </head>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
@@ -21,31 +21,25 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html"id="home">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html"id="products">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html"id="about">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html"id="contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
-                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
                     </a>
-                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
                         <i class="fas fa-user-plus me-2"></i> Register
                     </a>
-                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
                     </a>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="banner-img text-white d-flex align-items-center justify-content-start bg-dark mx-3" style="background-image:url('./images/main-banner.jpg'); height:600px; background-size:cover;border-radius:5px;">
-        <div class="container">
-            <p class="display-4">New Season Arrivals</p>
-            <p class="fs-5">This is a wider card with supporting text below as a natural lead-in to additional content.</p>
-        </div>
-    </div>
     <div class="container text-center my-5">
         <h1>Latest Products</h1>
         <hr>
@@ -62,4 +56,4 @@
         <p class="mb-0" style="font-size: 1.3em;">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
     </footer>
 </body>
-</html> 
+</html>
