--- a/html/Register.html
+++ b/html/Register.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
-    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="styles.css"rel="stylesheet">
+    <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
+    <link href="../css/styles.css"rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light py-3">
         <div class="container">
             <a class="navbar-brand" href="#">
@@ -19,19 +19,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
-                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
                     </a>
-                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
                         <i class="fas fa-user-plus me-2"></i> Register
                     </a>
-                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
                     </a>
                 </div>
@@ -39,31 +39,34 @@
         </div>
     </nav>
     <div class="container">
-        <h1 class="text-center mb-4">Contact Us</h1>
+        <h1 class="text-center mb-4">Register</h1>
         <hr>
         <div class="row justify-content-center">
             <div class="col-12 col-md-6 col-lg-4">
                 <form class="p-4 rounded bg-white shadow-sm">
                     <div class="mb-3">
-                        <label for="name" class="form-label">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                        <label for="fullName" class="form-label">Full Name</label>
+                        <input type="text" class="form-control" id="fullName" placeholder="Enter Your Name">
                     </div>
                     <div class="mb-3">
-                        <label for="email" class="form-label">Email</label>
+                        <label for="email" class="form-label">Email Address</label>
                         <input type="email" class="form-control" id="email" placeholder="name@example.com">
                     </div>
                     <div class="mb-3">
-                        <label for="message" class="form-label">Message</label>
-                        <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Password">
                     </div>
+                    <p class="small">
+                        Already have an account? <a href="login.html" class="text-decoration-underline text-aqua">Login</a>
+                    </p>
                     <div class="text-center">
-                        <button type="submit" class="btn btn-dark w-100">Send</button>
+                        <button type="submit" class="btn btn-dark w-100">Register</button>
                     </div>
                 </form>
             </div>
-        </div>        
+        </div>
     </div>
-    <footer class="bg-light py-4 text-center mt-5">
+    <footer class="py-4 text-center mt-5">
         <p class="mb-0">Made with <span style="color:red;">&#x2665;</span> By <u>Tarun Mudhiraj</u></p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
