--- a/html/cart.html
+++ b/html/cart.html
@@ -7,8 +7,8 @@
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="script.js"></script>
-    <link href="styles.css"rel="stylesheet">
+    <script src="../js/script.js"></script>
+    <link href="../css/styles.css"rel="stylesheet">
 </head>
 <body class="bg-white">
 <div>
@@ -22,19 +22,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
-                    <li class="nav-item"><a class="nav-link text-secondary" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Product-page.html">Products</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="About.html">About</a></li>
-                    <li class="nav-item"><a class="nav-link text-secondary" href="Contact-page.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Product-page.html">Products</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./About.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link text-secondary" href="./Contact-page.html">Contact</a></li>
                 </ul>
                 <div class="d-flex gap-3">
-                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
                     </a>
-                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
                         <i class="fas fa-user-plus me-2"></i> Register
                     </a>
-                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
                     </a>
                 </div>
@@ -46,7 +46,7 @@
         <hr class="w-100 mx-auto">
         <div class="d-flex flex-column justify-content-center align-items-center p-4 bg-dark-gray rounded" style="height: 350px;">
             <p class="fs-1 mb-4 text-center">Your Cart is Empty</p>
-            <a href="index.html" class="text-decoration-none">
+            <a href="./index.html" class="text-decoration-none">
                 <button id="cart-continue-btn" class="btn btn-outline-dark px-4 py-2">
                     <i class="fa-solid fa-left-long me-2"></i> Continue Shopping
                 </button>
