--- a/html/login.html
+++ b/html/login.html
@@ -6,7 +6,7 @@
     <title>Login Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/1e086755ed.js" crossorigin="anonymous"></script>
-    <link href="styles.css"rel="stylesheet">
+    <link href="../css/styles.css"rel="stylesheet">
 </head>
 <body>
     <nav class="sticky-top navbar navbar-expand-lg navbar-light bg-light">
@@ -18,26 +18,26 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="index.html">Home</a>
+                        <a class="nav-link text-secondary" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="Product-page.html">Products</a>
+                        <a class="nav-link text-secondary" href="./Product-page.html">Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="About.html">About</a>
+                        <a class="nav-link text-secondary" href="./About.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-secondary" href="Contact-page.html">Contact</a>
+                        <a class="nav-link text-secondary" href="./Contact-page.html">Contact</a>
                     </li>
                 </ul>
                 <div class="d-flex gap-2">
-                    <a href="login.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./login.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-right-to-bracket me-2"></i> Login
                     </a>
-                    <a href="Register.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./Register.html" class="btn btn-outline-dark btn-sm">
                         <i class="fas fa-user-plus me-2"></i> Register
                     </a>
-                    <a href="cart.html" class="btn btn-outline-dark btn-sm">
+                    <a href="./cart.html" class="btn btn-outline-dark btn-sm">
                         <i class="fa-solid fa-cart-shopping me-2"></i> Cart (<span id="cart-value">0</span>)
                     </a>
                 </div>
